Fix: header overlap with Login/register && footer positioned to stay at the bottom of page after login

--- a/WebApp/src/app/pages/home/home.component.scss
+++ b/WebApp/src/app/pages/home/home.component.scss
@@ -1,6 +1,7 @@
 #homesection {
   background-color: rgb(2, 0, 0);
   width: 100%;
+  margin-bottom: -50px;
 }
 
 .text {
