--- a/WebApp/src/app/pages/register/register.component.scss
+++ b/WebApp/src/app/pages/register/register.component.scss
@@ -1,7 +1,11 @@
 .register-box{
-    padding-top: 100px;
-    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .register-card mat-card{
